--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     body {
       margin: 0;
+      height: 101%;
       overflow: hidden; /* Ensure the body takes up the entire viewport */
       background-color: #060404;
       transition: background-color 0.5s ease;
