--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       height: 150%;
-      overflow: hidden; /* Ensure the body takes up the entire viewport */
+      overflow: visible; /* Ensure the body takes up the entire viewport */
       background-color: #060404;
       transition: background-color 0.5s ease;
     }
