--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <style>
     body {
       margin: 0;
-      height: 150%;
-      overflow: visible; /* Ensure the body takes up the entire viewport */
+      overflow: hidden; /* Ensure the body takes up the entire viewport */
       background-color: #060404;
       transition: background-color 0.5s ease;
     }
