--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fullscreen Example</title>
   <style>
+    .search-bar {
+            display: block;
+        }
+
+        /* Media query to hide the search bar on iOS devices */
+        @media screen and (max-width: 767px) {
+            /* Adjust the max-width value based on your needs */
+            .search-bar {
+                display: none;
+            }
+        }
     body {
       margin: 0;
       overflow: hidden; /* Ensure the body takes up the entire viewport */
